Change color of the header

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,5 +2,5 @@
   display: flex;
   width: 100%;
   min-height: 60px;
-  background-color: burlywood;
+  background-color: rgb(33, 34, 52);
 }/*# sourceMappingURL=header.css.map */
