--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,6 +2,6 @@
     display: flex;
     width: 100%;
     min-height: 60px;
-    background-color: burlywood;
+    background-color: rgb(33, 34, 52);
 }
 
