--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,17 @@
 .header {
-  display: flex;
-  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  max-width: 100%;
   min-height: 60px;
   background-color: rgb(33, 34, 52);
+  align-items: center;
+  overflow-x: hidden;
+}
+
+@media screen and (max-width: 600px) {
+  .header {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column: 2/3;
+  }
 }/*# sourceMappingURL=header.css.map */
