--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -7,4 +7,10 @@
 
 input[type=search] {
   width: 100%;
+}
+
+@media (max-width: 800px) {
+  #search-container {
+    grid-column: 2/4;
+  }
 }/*# sourceMappingURL=search.css.map */
