--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -8,3 +8,9 @@
 input[type="search"] {
     width: 100%;
 }
+
+@media (max-width: 800px) {
+    #search-container {
+        grid-column: 2 / 4;
+    }
+}
