--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -1,16 +1,18 @@
 #search-container {
     padding: 5px 20px;
     display: inline;
-    grid-column: 2 / 7;
+    grid-column: 3 / 8;
     width: 100%;
 }
 
 input[type="search"] {
     width: 100%;
+    padding: 5px;
+
 }
 
 @media (max-width: 800px) {
     #search-container {
-        grid-column: 2 / 4;
+        grid-column: 2 / 5;
     }
 }
