--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -1,7 +1,9 @@
+@import "../../scss-variables/variables";
+
 h1 {
    margin: 0;
    color: white;
-   padding: 5px 20px;
+   padding: $header-top-bottom-padding $header-left-right-padding;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
