--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -1,6 +1,5 @@
 #search-container {
   padding: 5px 20px;
-  display: inline;
   grid-column: 3/8;
   width: 100%;
 }
@@ -8,6 +7,10 @@
 input[type=search] {
   width: 100%;
   padding: 5px;
+}
+
+form {
+  display: flex;
 }
 
 @media (max-width: 800px) {
