--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -1,6 +1,7 @@
+@import "../../scss-variables/variables";
+
 #search-container {
-    padding: 5px 20px;
-    display: inline;
+    padding: $header-top-bottom-padding $header-left-right-padding;
     grid-column: 3 / 8;
     width: 100%;
 }
@@ -8,7 +9,10 @@
 input[type="search"] {
     width: 100%;
     padding: 5px;
+}
 
+form {
+    display: flex;
 }
 
 @media (max-width: 800px) {
