Change color and height of the search button

--- a/src/components/search/search-button/searchButton.scss
+++ b/src/components/search/search-button/searchButton.scss
@@ -2,4 +2,9 @@
 
 button {
     padding: $header-top-bottom-padding $header-left-right-padding;
+    background-color: #CCCBAD;
+    color: rgb(33, 34, 52);
+    border: none;
+    border-radius: 2px;
+    height: 100%;
 }
