--- a/src/components/search/search-button/searchButton.css
+++ b/src/components/search/search-button/searchButton.css
@@ -1,3 +1,8 @@
 button {
   padding: 5px 20px;
+  background-color: #CCCBAD;
+  color: rgb(33, 34, 52);
+  border: none;
+  border-radius: 2px;
+  height: 100%;
 }/*# sourceMappingURL=searchButton.css.map */
