Store light gray in a variable

--- a/src/components/search/search-button/searchButton.scss
+++ b/src/components/search/search-button/searchButton.scss
@@ -2,7 +2,7 @@
 
 button {
     padding: $header-top-bottom-padding $header-left-right-padding;
-    background-color: #CCCBAD;
+    background-color: $light-gray;
     color: rgb(33, 34, 52);
     border: none;
     border-radius: 2px;
