--- a/src/components/logo/logo.css
+++ b/src/components/logo/logo.css
@@ -1,6 +1,6 @@
 h1 {
   margin: 0;
-  color: white;
+  color: #CCCBAD;
   padding: 5px 20px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }/*# sourceMappingURL=logo.css.map */
