--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -2,7 +2,7 @@
 
 h1 {
    margin: 0;
-   color: white;
+   color: $light-gray;
    padding: $header-top-bottom-padding $header-left-right-padding;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
