--- a/src/scss-variables/_variables.scss
+++ b/src/scss-variables/_variables.scss
@@ -1,3 +1,5 @@
 $header-top-bottom-padding: 5px;
 $header-left-right-padding: 20px;
 $light-gray: #CCCBAD;
+$secondary-blue: rgb(63, 64, 82);
+$primary-blue: rgb(33, 34, 52);
