--- a/src/components/buyButton/buyButton.css
+++ b/src/components/buyButton/buyButton.css
@@ -5,6 +5,7 @@
   align-self: center;
   background-color: rgb(63, 64, 82);
   color: white;
+  margin-right: 3rem;
 }
 
 @media (max-width: 1000px) {
