--- a/src/components/buyButton/buyButton.scss
+++ b/src/components/buyButton/buyButton.scss
@@ -7,6 +7,7 @@
     align-self: center;
     background-color: $secondary-blue;
     color: white;
+    margin-right: 3rem;
 }
 
 @media (max-width: 1000px) {
