--- a/src/components/categories/categories.scss
+++ b/src/components/categories/categories.scss
@@ -1,6 +1,5 @@
 .categories {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-
+    justify-content: space-around;
 }
