--- a/src/components/categories/categories.css
+++ b/src/components/categories/categories.css
@@ -1,5 +1,11 @@
 .categories {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
+}
+
+@media screen and (min-width: 800px) {
+  .categories {
+    justify-content: space-evenly;
+  }
 }/*# sourceMappingURL=categories.css.map */
