--- a/src/components/search/search-button/searchButton.css
+++ b/src/components/search/search-button/searchButton.css
@@ -5,4 +5,10 @@ button {
   border: none;
   border-radius: 2px;
   height: 100%;
+}
+
+@media screen and (max-width: 500px) {
+  #search-button {
+    padding: 1px;
+  }
 }/*# sourceMappingURL=searchButton.css.map */
