--- a/src/components/search/search-button/searchButton.scss
+++ b/src/components/search/search-button/searchButton.scss
@@ -8,3 +8,9 @@ button {
     border-radius: 2px;
     height: 100%;
 }
+
+@media screen and (max-width: 500px) {
+    #search-button {
+        padding: 1px;
+    }
+}
