--- a/src/components/buyButton/buyButton.css
+++ b/src/components/buyButton/buyButton.css
@@ -6,6 +6,14 @@
   background-color: rgb(63, 64, 82);
   color: white;
   margin-right: 3rem;
+  text-align: center;
+}
+.buy-button:active {
+  outline: rgb(63, 64, 82) solid 5px;
+  outline-offset: -1px;
+}
+.buy-button:hover {
+  cursor: pointer;
 }
 
 @media (max-width: 900px) {
