--- a/src/components/buyButton/buyButton.css
+++ b/src/components/buyButton/buyButton.css
@@ -2,10 +2,10 @@
   height: 2rem;
   font-size: 1rem;
   margin-left: auto;
+  margin-right: auto;
   align-self: center;
   background-color: rgb(63, 64, 82);
   color: white;
-  margin-right: 3rem;
   text-align: center;
 }
 .buy-button:active {
