--- a/src/components/buyButton/buyButton.scss
+++ b/src/components/buyButton/buyButton.scss
@@ -4,10 +4,10 @@
     height: 2rem;
     font-size: 1rem;
     margin-left: auto;
+    margin-right: auto;
     align-self: center;
     background-color: $secondary-blue;
     color: white;
-    margin-right: 3rem;
     text-align: center;
 
     &:active {
