--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -41,7 +41,7 @@
     flex-direction: column;
     margin: auto;
   }
-  li:nth-child(1) {
+  li {
     margin: auto;
   }
 }/*# sourceMappingURL=product.css.map */
