--- a/src/components/category/category.css
+++ b/src/components/category/category.css
@@ -7,4 +7,6 @@
 a {
   color: white;
   text-decoration: none;
+  font-size: 1rem;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }/*# sourceMappingURL=category.css.map */
