--- a/src/components/quantity/quantity.css
+++ b/src/components/quantity/quantity.css
@@ -1,5 +1,6 @@
 .quantity {
   font-size: 0.7rem;
+  font-family: "DejaVu Serif", "Times New Roman", Times, serif;
   display: flex;
   margin: auto;
   flex-direction: column;
