--- a/src/components/search/search-button/searchButton.scss
+++ b/src/components/search/search-button/searchButton.scss
@@ -21,6 +21,6 @@ button {
 
 @media screen and (max-width: 500px) {
     #search-button {
-        padding: 1px;
+        padding: 0.4rem;
     }
 }
