--- a/src/components/quantity/quantity.scss
+++ b/src/components/quantity/quantity.scss
@@ -1,11 +1,20 @@
-.quantity {
+@mixin quantity {
     font-size: 0.7rem;
     font-family: 'DejaVu Serif', 'Times New Roman', Times, serif;
     display: flex;
-    margin: auto;
     flex-direction: column;
+}
+
+.quantity {
+    @include quantity();
+    margin: auto;
 }
 
 #quantity-bought {
     width: 5rem;
+}
+
+.quantity-cart {
+    @include quantity();
+    margin-right: auto;
 }
